syntax = "proto3";

package hello;

//定义hello服务
service hello {
    //定义SayHello方法
    rpc SayHello(HelloRequest) returns (HelloResponse){}
}

//HelloRequest 请求结构体
message HelloRequest {
    string name = 1;
}

//HelloResponse 响应结构体
message HelloResponse {
    string message = 1;
}
